facade around Duration