@@ -2,7 +2,6 @@ package com.tramchester.integration.graph.diversions;
 
 import com.tramchester.ComponentContainer;
 import com.tramchester.ComponentsBuilder;
-import com.tramchester.testSupport.DiagramCreator;
 import com.tramchester.config.TemporaryStationsWalkIds;
 import com.tramchester.domain.Journey;
 import com.tramchester.domain.JourneyRequest;
@@ -10,6 +9,7 @@ import com.tramchester.domain.StationIdPair;
 import com.tramchester.domain.dates.DateRange;
 import com.tramchester.domain.dates.TramDate;
 import com.tramchester.domain.reference.TransportMode;
+import com.tramchester.domain.time.TramDuration;
 import com.tramchester.domain.time.TramTime;
 import com.tramchester.graph.core.GraphDatabase;
 import com.tramchester.graph.core.GraphTransaction;
@@ -18,12 +18,12 @@ import com.tramchester.integration.testSupport.RouteCalculatorTestFacade;
 import com.tramchester.integration.testSupport.config.TemporaryStationsWalkConfigForTest;
 import com.tramchester.integration.testSupport.tram.CentralStationsSubGraph;
 import com.tramchester.integration.testSupport.tram.IntegrationTramStationWalksTestConfig;
+import com.tramchester.testSupport.DiagramCreator;
 import com.tramchester.testSupport.TestEnv;
 import org.junit.jupiter.api.*;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.time.Duration;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -46,7 +46,7 @@ class SubgraphSmallStationWalksTest {
 
     private RouteCalculatorTestFacade calculator;
     private GraphTransaction txn;
-    private Duration maxJourneyDuration;
+    private TramDuration maxJourneyDuration;
     private int maxChanges;
 
     @BeforeAll
@@ -81,7 +81,7 @@ class SubgraphSmallStationWalksTest {
         txn = database.beginTx(TXN_TIMEOUT, TimeUnit.SECONDS);
 
         calculator = new RouteCalculatorTestFacade(componentContainer, txn);
-        maxJourneyDuration = Duration.ofMinutes(30);
+        maxJourneyDuration = TramDuration.ofMinutes(30);
         maxChanges = 2;
     }
 
@@ -133,7 +133,7 @@ class SubgraphSmallStationWalksTest {
         assertFalse(results.isEmpty(), "no journeys");
 
         results.forEach(result -> {
-            assertEquals(Connect, result.getStages().get(0).getMode(), "wrong mode? " + result);
+            assertEquals(Connect, result.getStages().getFirst().getMode(), "wrong mode? " + result);
         });
     }
 
@@ -149,7 +149,7 @@ class SubgraphSmallStationWalksTest {
 
         results.forEach(result -> {
             assertEquals(1, result.getStages().size(), result.toString());
-            assertEquals(Connect, result.getStages().get(0).getMode(), "wrong mode? " + result);
+            assertEquals(Connect, result.getStages().getFirst().getMode(), "wrong mode? " + result);
         });
     }
 
